# STNIN

./: __AboutThisRepository.txt
0__Txt_Files/: 0_projects.txt  1_cmake.txt  3_github.txt  4_sdlC++.txt  5_toInstallProgram.txt  6_assemblyCompile.txt  7_bashrc_ps1.txt
StninProjects/1__GitHub/StninProjects/0__Txt_Files/: 2_docker.txt  _permissions.txt
StninProjects/1__GitHub/StninProjects/L000__C_Projects/3_SnakeGame/: CMakeLists.txt
StninProjects/1__GitHub/StninProjects/L000__C_Projects/3_SnakeGame/src/: Defines.h  Snake.h  SnakeCursor.h  SnakeMap.c  SnakeMap.h  SnakeMenu.c  SnakeScore.h
StninProjects/3__BlueJ/ProcedimentalReader/: Reader.ctxt  Reader.java  package.bluej
StninProjects/3__BlueJ/Reader/: InputText.ctxt  Main.java  Menu.java  Settings.java
StninProjects/L000__C_Projects/1_DataBase/src/: Npdb_C.c
StninProjects/L000__C_Projects/1_DataBase/srcVAlpha.1/: main.c
StninProjects/L000__C_Projects/1_DataBase/srcVShell/: main.c
StninProjects/L000__C_Projects/2_DataStruct/CircularRow/: Row.h  RowMain.c  row
StninProjects/L000__C_Projects/2_DataStruct/DoubleChainedList/: DoubleChainedList.c  DoubleChainedList.h
StninProjects/L000__C_Projects/2_DataStruct/Hash/: Hash.c
StninProjects/L000__C_Projects/2_DataStruct/List/: List.h  list
StninProjects/L002__Python_Projects/0_Test_Python/: Test_Spacy.py
StninProjects/L002__Python_Projects/1_CurrenciesProblem/: Currencies.py
StninProjects/L007__ShellScript_Projects/0_Test_SScript/: RemoveFoldersTest.sh
StninProjects/U000__ProjetoIcChatBot/: Relatorio_Parcial_Thiago_Yuji_LibreOfficeLinux.odt
(+113 files in other folders)
